<resources>
    <string name="app_name">santteus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- home -->
    <string name="home_location">서울 동작구</string>
    <string name="home_list">목록</string>
    <string name="home_diet">다이어트</string>
    <string name="home_strength">체력증진</string>
    <string name="home_mood">기분전환</string>

    <!-- homelist -->
    <string name="home_name">보라매공원 산책길</string>
    <string name="home_level">매우 쉬움</string>
    <string name="home_total_distance">1.63km</string>
    <string name="home_time">30분</string>
    <string name="home_toilet">화장실</string>
    <string name="home_convenience">편의점</string>
    <string name="home_bar">|</string>
    <string name="home_title_distance">현재 위치에서</string>
    <string name="home_distance">200m</string>
    <string name="home_map">지도</string>

    <!-- sign -->
    <string name="sign_in_welcom">Welcome!</string>
    <string name="sign_in_detail">우리 동네 산책로\n나에게 맞는 산책로를 찾아보세요!</string>
    <string name="sign_in_login">로그인</string>
    <string name="sign_in_find">아이디/비밀번호 찾기</string>
    <string name="sign_in_no_count">계정이 없으신가요?</string>
    <string name="sign_in_to_sign_up"> 가입하기</string>
    <string name="sign_in_id">아이디</string>
    <string name="sign_in_pw">비밀번호</string>
    <string name="sign_up_title">회원정보 입력</string>
    <string name="sign_up_id">아이디 입력</string>
    <string name="sign_up_password">비밀번호 입력</string>
    <string name="sign_up_password_ok">비밀번호 재입력</string>
    <string name="sign_up_birth">생년월일 8글자</string>
    <string name="sign_up_kg">몸무게 00kg</string>
    <string name="sign_up_create_user">계정 생성</string>
    <string name="sign_up_woman">여성</string>
    <string name="sign_up_man">남성</string>

    <!-- run -->
    <string name="run_complete">저장 완료!</string>
    <string name="run_complete_detail">운동 결과가 기록에 저장되었습니다.</string>
    <string name="run_complete_close">닫기</string>
    <string name="run_complete_record">기록 보러가기</string>
    <string name="run_finish_title">운동 종료</string>
    <string name="run_finish_save">저장하기</string>
    <string name="run_finish_distance">이동 거리</string>
    <string name="run_finish_time">시간</string>
    <string name="run_finish_step">걸음 수</string>
    <string name="run_finish_cal">칼로리</string>
    <string name="run_finish_age">신체나이</string>
    <string name="run_finish_top">상위</string>
    <string name="run_start_finish">운동 종료</string>
    <string name="run_start_stop">일시 정지</string>

    <!-- mypage-->
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_title_bmi">BMI</string>
    <string name="my_page_title_exercise">운동량 상위</string>
    <string name="my_page_title_reword">산책로 뱃지</string>
    <string name="my_page_license">라이선스</string>
    <string name="my_page_personal">개인정보처리방침</string>
    <string name="my_page_service">서비스 이용약관</string>
    <string name="my_page_logout">로그아웃</string>
    <string name="my_page_withdrawal">회원탈퇴</string>
    <string name="my_page_id">san1234@naver.com</string>
    <string name="my_page_bmi">정상</string>
    <string name="my_page_exercise">12%</string>
    <string name="my_page_reword">07개</string>

    <!-- dialog -->
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="logout">로그아웃</string>
    <string name="logout_check">정말 로그아웃하시겠습니까?</string>
    <string name="withdrawal">탈퇴완료</string>
    <string name="withdrawal_sub">저희 서비스를 이용해주셔서 감사합니다.</string>
    <string name="ok">확인</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>