<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sign_12">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/logout_check"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_no"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_run_8_selected"
        android:text="@string/no"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_subtitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bg_run_8"
        android:text="@string/yes"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_no" />
</androidx.constraintlayout.widget.ConstraintLayout>