<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/signInFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.santteus.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.santteus.ui.record.RecordFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.example.santteus.ui.mypage.MyPageFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_my_page" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.santteus.ui.signin.SignInFragment"
        android:label="SignInFragment"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.santteus.ui.signup.SignUpFragment"
        android:label="SignUpFragment"
        tools:layout="@layout/fragment_sign_up"/>
</navigation>