<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeListActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_list_top" />

    <EditText
        android:id="@+id/et_home_list_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_sign_12"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/home_location"
        android:inputType="textPersonName"
        android:paddingLeft="45dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_home_list_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_home_list_search"
        app:layout_constraintStart_toStartOf="@+id/et_home_list_search"
        app:layout_constraintTop_toTopOf="@+id/et_home_list_search"
        app:srcCompat="@drawable/ic_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home_list_diet"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_category_btn"
        android:fontFamily="@font/roboto_regular"
        android:padding="-30dp"
        android:text="@string/home_diet"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/et_home_list_search"
        app:layout_constraintTop_toBottomOf="@+id/et_home_list_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home_list_strength"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/selector_category_btn"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/home_strength"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_home_list_diet"
        app:layout_constraintStart_toEndOf="@+id/btn_home_list_diet"
        app:layout_constraintTop_toTopOf="@+id/btn_home_list_diet" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home_list_mood"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/selector_category_btn"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/home_mood"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_home_list_strength"
        app:layout_constraintStart_toEndOf="@+id/btn_home_list_strength"
        app:layout_constraintTop_toTopOf="@+id/btn_home_list_strength" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_path"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background"
        tools:listitem="@layout/item_home_list"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingLeft="20dp"
        android:background="@drawable/bg_white_100"
        android:text="@string/home_map"
        android:drawableStart="@drawable/ic_map"
        android:drawablePadding="-15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>